# visu

./: .gitignore  INTERACTIVE_COMPONENTS_README.md  Makefile  README-LOCAL-SETUP.md  docker-compose.yml
src/: Dockerfile  lambda_home.py  local_server.py  main.py  manage.py  pyproject.toml
src/backend/: __init__.py  aws_backend.py  backend.py  get_backend.py  local_backend.py
src/blog/: models.py  tests.py  urls.py  views.py
src/config/: __init__.py  app_config.py
src/controllers/: __init__.py  index_controller.py  post_controller.py
src/decorators/: __init__.py  safe_response.py
src/drivers/: aws_driver.py  get_driver.py
src/ibira/: asgi.py  db_router.py  settings.py  urls.py  wsgi.py
src/interpreters/: markdown.py
src/js/: package.json
src/lambda_handlers/: lambda_index.py  lambda_post.py
src/models/: __init__.py  post.py  post_content.py
src/parsers/: __init__.py  content_element_parser.py  format_date.py  markdown_parser.py
src/readers/: local_reader.py  reader.py
src/renderers/: __init__.py  article.py  index.py
src/responses/: __init__.py  formatters.py  safe_response.py
src/scripts/: package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
src/static/: output.css  styles.css
src/styles/: base_style.py  simple_style.py
src/templates/: article.html  base.html  index.html  not_found.html  post.html  server_error.html
src/tests/: test_article_renderer.py  test_index_renderer.py  test_local_reader.py  test_markdown.py
src/views/: __init__.py  article.py  index.py  not_found.py  post.py  server_error.py  (+2 more)
(+43 files in other folders)
