[project]
name = "visu"
version = "0.1.0"
description = "This is ibira-xyz's webserver"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "jinja2>=3.1.6",
    "markdown>=3.10",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "flask>=3.1.2",
    "lorem-text>=3.0",
]
